--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="Playstation_Img/logo.png" class="logo" alt="">
+            <img src="img/logo.png" class="logo" alt="">
             <nav>
                 <ul id="menuList">
                     <li>
@@ -28,7 +28,7 @@
                     </li>
                 </ul>
             </nav>
-            <img src="Playstation_Img/menu.png" class="menu-icon" onclick="togglemenu()" alt="">
+            <img src="img/menu.png" class="menu-icon" onclick="togglemenu()" alt="">
         </div>
         <div class="row">
             <div class="col-1">
@@ -36,21 +36,21 @@
                 <h3>Wireless Controllers For Playstation 4 </h3>
                 <p>(Compatible/Generic)</p>
                 <h4>49,99$</h4>
-                <button type="button">Buy Now ! <img src="Playstation_Img/arrow.png" alt=""></button>
+                <button type="button">Buy Now ! <img src="img/arrow.png" alt=""></button>
             </div>
             <div class="col-2">
-                <img src="Playstation_Img/controller.png" class="controller" alt="">
+                <img src="img/controller.png" class="controller" alt="">
                 <div class="color-box"></div>
                 <div class="add-btn">
-                    <img src="Playstation_Img/add.png" alt="">
+                    <img src="img/add.png" alt="">
                     <p><small>Add to cart</small></p>
                 </div>
             </div>
         </div>
         <div class="social-links">
-            <img src="Playstation_Img/fb.png" alt="">
-            <img src="Playstation_Img/ig.png" alt="">
-            <img src="Playstation_Img/tw.png" alt="">
+            <img src="img/fb.png" alt="">
+            <img src="img/ig.png" alt="">
+            <img src="img/tw.png" alt="">
         </div>
     </div>
     <script>
